# cogent-gamma

./: .gitignore  AGENTS.md  CLAUDE.md  COGAMES_ISSUE.md  COGENT.md  IMPROVE.md  README.md  SCISSORS_UPLOADS.md  STATUS.md  check_test_012_delta.sh  pyproject.toml  test_attempt_023.sh  test_attempt_023_seed_43.txt  test_attempt_023_seed_44.txt  test_attempt_023_seed_45.txt  test_attempt_023_seed_46.txt  test_baseline_42.txt  test_results_023.txt  test_seeds.sh  test_single_42.txt
.coach/: state.json  todos.md
cogames/: coach.py  player.py
cogames/cvc/: cvc_policy.py
cogent/: IDENTITY.md  INTENTION.md  dashboard.md  state.json  test_in_progress.md  test_in_progress_011.md  test_in_progress_023.md  test_results_local_023.md  todos.md
cogent/dashboard/: index.html
cogent/hooks/: on-create.md  on-wake.md
cogent/skills/: cogames.md  improve.md
cogs/agent_lightning/: README.md  __init__.py  learner.py
docs/: cogames.md  coglet.md  cvc-player.md  cvc.md  four_score.md  framework.md  improvements.md  proglet.md  strategy.md  tournament.md
docs/design/: coglet_runtime.md
docs/plans/: 2026-03-28-proglet-impl.md
examples/counter.cog/: counter.py
skills/cogamer.configure/: SKILL.md
skills/improve/: SKILL.md
skills/memory-wipe/: SKILL.md
src/coglet/: __init__.py  cli.py  (+6 more)
tests/: conftest.py  test_cvc_pco_integration.py  test_improvements.py  test_integration.py  test_mixins.py  test_no_shared_state.py  test_pco_al_learner.py  test_pco_integration.py  test_pco_learner.py  test_pco_llm_experiment.py  test_pco_optimizer.py  test_runtime.py  test_trace.py
(+34 files in other folders)
